@@ -186,6 +186,8 @@ int bsdconv_get_phase_index(struct bsdconv_instance *, int);
 int bsdconv_get_codec_index(struct bsdconv_instance *, int, int);
 int bsdconv_insert_phase(struct bsdconv_instance *, const char *, int, int);
 int bsdconv_insert_codec(struct bsdconv_instance *, const char *, int, int);
+int bsdconv_replace_phase(struct bsdconv_instance *, const char *, int, int);
+int bsdconv_replace_codec(struct bsdconv_instance *, const char *, int, int);
 void bsdconv_init(struct bsdconv_instance *);
 void bsdconv_destroy(struct bsdconv_instance *);
 void bsdconv(struct bsdconv_instance *);
